add left-right side for chair

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             </div>
             <div class="flex w-[80%] mx-auto justify-around items-center chair-area">
               <div class="text-center w-[33.33%]">
-                <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-up text-white cursor-pointer" id="arrow-top"></i>
-                  <p class="text-white sm:text-[30px] text-[20px] select-none" id="up-down-number">1</p>
-                  <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-down text-white cursor-pointer" id="arrow-down"></i>
+                <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-up text-white cursor-pointer" id="arrow-top-left"></i>
+                  <p class="text-white sm:text-[30px] text-[20px] select-none" id="up-down-number-left">1</p>
+                  <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-down text-white cursor-pointer" id="arrow-down-left"></i>
               </div>
               <div class="w-[33.33%]">
                 <svg class="w-[80%] mx-auto fill-white" width="150" height="140" viewBox="0 0 137 130" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -55,18 +55,18 @@
               </div>
               <div class="w-[33.33%]">
                   <div class="flex justify-between items-center w-[70%] mx-auto">
-                    <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-left text-white cursor-pointer" id="arrow-left"></i>
-                      <p class="text-white sm:text-[30px] text-[20px] select-none" id="left-right-number">80</p>
-                    <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-right text-white cursor-pointer" id="arrow-right"></i>
+                    <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-left text-white cursor-pointer" id="arrow-left-left"></i>
+                      <p class="text-white sm:text-[30px] text-[20px] select-none" id="left-right-number-left">80</p>
+                    <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-right text-white cursor-pointer" id="arrow-right-left"></i>
                   </div>
               </div>
             </div>
             <p class="hidden" id="toggle-show">0</p>
             <div class="flex w-[80%] mx-auto justify-around items-center chair-area">
               <div class="text-center w-[33.33%]">
-                <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-up text-white cursor-pointer" id="arrow-top"></i>
-                  <p class="text-white sm:text-[30px] text-[20px] select-none" id="up-down-number">1</p>
-                  <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-down text-white cursor-pointer" id="arrow-down"></i>
+                <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-up text-white cursor-pointer" id="arrow-top-right"></i>
+                  <p class="text-white sm:text-[30px] text-[20px] select-none" id="up-down-number-right">1</p>
+                  <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-down text-white cursor-pointer" id="arrow-down-right"></i>
               </div>
               <div class="w-[33.33%]">
                 <svg class="w-[80%] mx-auto fill-white" width="150" height="140" viewBox="0 0 137 130" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -75,9 +75,9 @@
               </div>
               <div class="w-[33.33%]">
                   <div class="flex justify-between items-center w-[70%] mx-auto">
-                    <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-left text-white cursor-pointer" id="arrow-left"></i>
-                      <p class="text-white sm:text-[30px] text-[20px] select-none" id="left-right-number">90</p>
-                    <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-right text-white cursor-pointer" id="arrow-right"></i>
+                    <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-left text-white cursor-pointer" id="arrow-left-right"></i>
+                      <p class="text-white sm:text-[30px] text-[20px] select-none" id="left-right-number-right">90</p>
+                    <i class="fa-solid sm:text-[20px] text-[10px] fa-caret-right text-white cursor-pointer" id="arrow-right-right"></i>
                   </div>
               </div>
             </div>
